# forkiteh-test-task

./: .example.env  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
app/: alembic.ini
app/application/services/: base.py
app/application/services/tron/wallet/: pagination.py
app/application/usecase/: base.py
app/application/usecase/tron/: __init__.py
app/application/usecase/tron/wallet/: fetch.py
app/bootstrap/: main.py
app/bootstrap/ioc/: container.py
app/bootstrap/ioc/providers/application/: __init__.py  services.py  use_cases.py
app/bootstrap/ioc/providers/bootstrap/: __init__.py  settings.py
app/bootstrap/ioc/providers/infra/: __init__.py  alchemy.py
app/bootstrap/settings/: base.py  dev.py
app/infra/pg/alembic/: env.py
app/infra/pg/alembic/versions/: 190287f54abb_update_decimal_limit.py  522714626657_walletqueryorm_balance_trx_migration_.py  cb80ecb066e2_torn_init.py
app/infra/pg/data_mappers/: base.py  wallet_query.py
app/infra/pg/models/: __init__.py
app/infra/pg/models/common/: __init__.py
app/infra/tron/: base.py  exceptions.py  handlers.py
app/infra/tron/gateways/: base.py
app/presentation/: lifespan.py
app/presentation/api/: __init__.py
app/presentation/api/v1/: handlers.py
app/presentation/exceptions/: base.py  handler.py
app/share/: custom_types.py  exceptions.py
docker_compose/: app.yaml  db.yaml
tests/: conftest.py
tests/fixtures/: common.py
tests/integrations/: endpoints_test.py
tests/ioc/: container.py
tests/ioc/providers/: infra.py
tests/mocs/: tron.py
(+31 files in other folders)
