[project]
name = "forkiteh-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.41",
    "tronpy>=0.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
